First unique letter lagorithm

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,21 @@
 /bin/
 /bin/
 /bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
